--- a/content/src/main/content/jcr_root/apps/clientlibs/components/structure/page/page.html
+++ b/content/src/main/content/jcr_root/apps/clientlibs/components/structure/page/page.html
@@ -1,11 +1,13 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <sly data-sly-include="partials/headlibs.html" data-sly-unwrap/>
+    <!--<sly data-sly-include="partials/headlibs.html" data-sly-unwrap/>-->
 </head>
 <body>
     <div>
         Base Html Page
+
+        <div data-sly-resource="${ @path='par', resourceType='foundation/components/parsys'}" data-sly-unwrap/>
     </div>
     <script>
 
